<resources>
    <string name="app_name">Mini Stockbit App</string>
    <string name="label_login_with_google">Login with Google</string>
    <string name="label_login_with_facebook">Login with Facebook</string>
    <string name="label_login">Login</string>
    <string name="label_username_or_email">Username or Email</string>
    <string name="label_password">Password</string>
    <string name="label_login_with_fingerprint">Login with Fingerprint</string>
    <string name="label_forgot_password">Forgot Password</string>
    <string name="label_action_blah">Action Bla Blah</string>
    <string name="label_register_now">Register now</string>
    <string name="label_dont_have_an_account_yet">Don\'t have an account yet? Register now</string>
    <string name="label_loading">Loading...</string>
    <string name="label_watchlist">Watchlist</string>
    <string name="label_stream">Stream</string>
    <string name="label_search">Search</string>
    <string name="label_chat">Chat</string>
    <string name="label_portfolio">Portfolio</string>
    <string name="label_logout">Logout</string>
    <string name="label_or">Or</string>
    <string name="label_bitcoin_code">BTC</string>
    <string name="label_bitcoin_fullname">Bitcoin</string>
    <string name="label_tryagain">Try again</string>
    <string name="label_all_watchlist">All Watchlist</string>
    <string name="label_add_symbol">Add Symbol</string>
</resources>